--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 /* reset ================================ */
 * {
   box-sizing: border-box;
@@ -131,6 +127,8 @@ header {
   background-repeat: no-repeat;
   background-position: center 50%;
   background-size: cover;
+  /* 背景画像のCSSを追加してください */
+  background-image: url("/top.jpg");
 }
 
 .top-message {
